<resources>
    <string name="app_name">TI Undira</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Rahmat Raditya</string>
    <string name="nav_header_subtitle">4411201054</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="footer">©Copyright UNDIRA 2022. All Right Reserved</string>
    <string name="menu_home">Home</string>
    <string name="menu_visimisi">Visi &amp; Misi</string>
    <string name="menu_tujuan">Tujuan</string>
    <string name="menu_profil">Profil Lulusan</string>
    <string name="menu_memilih">Mengapa memilih IT ?</string>
    <string name="menu_kurikulum">Kurikulum</string>
    <string name="menu_kontak">Kontak</string>
    <string name="home_desc1">Program Studi Teknik Informatika merupakan program studi yang menekankan pada kemampuan dalam merancang, mengembangkan ragam algoritma komputasi (teori komputasi dan algoritma) yang mencakup spektrum yang sangat beragam dari hal hal yang teoritis dan algoritmis hingga yang bersifat terapan.</string>
    <string name="home_subhead">Program Studi Teknik Informatika memiliki 3 fokus utama yaitu :</string>
    <string name="home_fokus"> \u25CF Mempelajari teori maupun algoritma yang digunakan dalam proses perancangan dan implementasi perangkat lunak.\n
        \u25CF Mempelajari teori maupun algoritma yang digunakan dalam proses perancangan dan implementasi sistem perangkat keras serta komponennya.\n
        \u25CF Mempelajari teori maupun algoritma yang digunakan sebagai model matematis dalam menyelesaikan permasalahan tertentu</string>
    <string name="home_desc2">Kurikulum Program Studi Teknik Informatika terdiri dari ilmu pengetahuan terkait dengan logika matematika, komputasi, dan algoritma yang dalam model terapannya dinyatakan dalam pengembangan program komputer.</string>
    <string name="visi_content">“Menjadi program studi terpercaya dan profesional yang berwawasan global untuk memenuhi kebutuhan dunia industri dan kewirausahaan berbasis ilmu pengetahuan dan teknologi dalam bidang keahlian network enterprise engineer dan software engineer pada tahun 2030.”</string>
    <string name="misi_content">Menyelenggarakan pengajaran, penelitian, dan pengabdian kepada kewirausahaan masyarakat bidang network enterprise engineer dan software engineer yang bermutu, terpercaya dan profesional.
        \n\nMengembangkan kemampuan dan keterampilan mahasiswa melalui berbagai kegiatan untuk memenuhi kebutuhan dunia industri dan secara berkesinambungan dalam bidang network enterprise engineer dan software engineer.
        \n\nMenyediakan sarana dan prasarana pendukung proses belajar mengajar bidang network enterprise engineer dan software engineer terkini yang tepat guna melampaui standar mutu Pendidikan Tinggi Nasional.
        \n\nMenerapkan tata kelola program studi yang efektif dan efisien melalui lingkungan kerja yang harmonis dan produktif
        \n\nMembangun kerjasama dan hubungan yang sinergis dengan seluruh pemangku kepentingan dalam bidang teknik informatika</string>
    <string name="tujuan_content1">Menghasilkan lulusan yang cerdas, berakhlak mulia, beretika, kompeten, dan berdaya saing tinggi serta mampu mengembangkan sains dan teknologi bidang network enterprise engineer dan software engineer, baik di tingkat nasional maupun global.</string>
    <string name="tujuan_content2">Menghasilkan penelitian unggulan dan inovasi yang mendorong pengembangan sains dan teknologi bidang network enterprise engineer dan software engineer dalam skala nasional maupun global.</string>
    <string name="tujuan_content3">Menghasilkan pengabdian kepada masyarakat sebagai hasil kegiatan pendidikan dan penelitian bidang network enterprise engineer dan software engineer dalam rangka membantu memberdayakan masyarakat agar mampu menyelesaikan masalah secara cerdas, mandiri, dan berkelanjutan</string>
    <string name="tujuan_content4">Mewujudkan kemandirian program studi yang adaptif, kreatif, proaktif, dan berkualitas terhadap tuntutan perkembangan teknologi yang berdampak terhadap terwujudnya good university governance</string>
    <string name="memilih_content1">Teknik Informatika merupakan bidang ilmu yang mempelajari bagaimana menggunakan teknologi komputer secara optimal guna menangani masalah transformasi atau pengolahan data dengan proses logika. Di Jurusan Teknik Informatika kamu akan mempelajari berbagai prinsip terkait ilmu komputer mulai dari proses perancangan, pengembangan, pengujian, hingga evaluasi sistem operasi perangkat lunak. Selama kuliah kamu akan banyak mengkaji pemrograman dan komputasi, dan dibekali pula dengan keterampilan merancang perangkat lunak.</string>
    <string name="memilih_content2">Dengan semakin pesatnya perkembangan teknologi membuat Jurusan Teknik Informatika menjadi salah satu jurusan yang memiliki banyak peminat. Pada SBMPTN 2021, Jurusan Teknik Informatika menjadi 5 besar jurusan paling diminati di rumpun saintek. Tidaklah mengherankan, karena jenis pekerjaan menjanjikan di masa depan berhubungan erat dengan lulusan dari jurusan ini. Belum lagi, besaran penghasilan yang berpotensi didapatkan pun sangatlah besar.
        \n\nIndonesia saat ini kekurangan tenaga ahli di bidang sains, teknologi, engineering, dan matematika (STEM). Jumlah lulusan di bidang STEM masih belum mencukupi kebutuhan yang ada di era revolusi industri 4.0. Prodi Teknik Informatika Universitas Dian Nusantara hadir dan berkomitmen untuk memenuhi kebutuhan Industri. Pengetahuan dan keahlian yang akan diperoleh dengan kuliah di Program Studi Teknik Informatika adalah kemampuan melakukan analisis, berpikir logis, berpikir sistematis, problem solving, bekerja secara mandiri maupun tim, memahami bahasa pemrograman, rekayasa informatika dan jaringan komputer serta kreatif, tekun, teliti, dan detail.</string>
    <string name="memilih_content3">Program Studi Teknik Informatika Universitas Dian Nusantara berdiri pada tahun 2019 dan dalam 2 tahun telah mendapatkan kepercayaan dengan jumlah mahasiswa saat ini adalah 900 mahasiswa. Hal ini menjadi salah satu alasan untuk bergabung dengan kami. Program Studi Teknik Informatika memiliki sumber daya manusia (dosen) dengan kualifikasi S2 dan S3 serta memiliki sertifikasi kompetensi profesional sesuai bidang keilmuannya.
        \n\nDalam proses belajar dan mengajar, Program Studi Teknik Informatika Universitas Dian Nusantara dilengkapi dengan Learning Management System (LMS) https://kuliahonline.undira.ac.id/ yang bisa diakses kapan saja dan di mana saja, serta terintegrasi ke SPADA DIKTI. Untuk beberapa mata kuliah terintegrasi dengan academy international seperti Oracle Academy, Red Hat Academy dan Huawei Academy, sehingga mahasiswa nanti akan mendapatkan sertifikat attendance course dan kesempatan untuk mendapatkan sertifikasi internasional.
        \n\nProgram Studi Teknik Informatika Universitas Dian Nusantara memiliki kurikulum yang selalu update dan juga sudah mengimplementasikan Program MBKM https://kampusmerdeka.kemdikbud.go.id/ untuk 8 bentuk kegiatan pembelajaran yaitu pertukaran pelajar, magang atau praktek kerja, Asistensi mengajar di satuan pendidikan, penelitian atau riset, proyek kemanusiaan, kegiatan wirausaha, studi/proyek independen dan membangun desa atau kuliah kerja nyata tematik (KKNT). Untuk semester ganjil 2021/2022 telah diikuti oleh 6 mahasiswa bentuk kegiatan pembelajaran studi/proyek independen pada Dicoding - Pengembang Front-End Web dan Back-End, Dicoding - Pengembang Aplikasi Multi-Platform dan Back-End, Talent Scouting Academy - The Future of IT Infrastructure and Cyber Security Analyst : Cybersecurity Analyst.</string>
    <string name="list_semester1">\u25CF Kalkulus
        \n\u25CF Aplikasi Komputer
        \n\u25CF Algoritma &amp; Pemrograman 1
        \n\u25CF Pengantar Sistem Digital
        \n\u25CF Sistem Basis Data
        \n\u25CF Bahasa Indonesia
        \n\u25CF Pancasila</string>
    <string name="list_semester2">\u25CF Struktur Data dan Algoritma
        \n\u25CF Algoritma &amp; Pemrograman 2
        \n\u25CF Aljabar Linier
        \n\u25CF Pendidikan Karakter
        \n\u25CF Pengantar Organisasi Komputer
        \n\u25CF Kewirausahaan I
        \n\u25CF Perancangan Basis Data</string>
    <string name="list_semester3">\u25CF Kewirausahaan 2
        \n\u25CF Rekayasa Perangkat Lunak
        \n\u25CF Pemrograman Basis Data
        \n\u25CF Pendidikan Agama
        \n\u25CF Bahasa Inggris 1
        \n\u25CF Sistem Operasi
        \n\u25CF Matematika Diskrit</string>
    <string name="list_semester4">\u25CF Pemrograman Berorientasi Objek
        \n\u25CF Dasar Pemrograman Web
        \n\u25CF Bahasa Inggris 2
        \n\u25CF Sistem Multimedia
        \n\u25CF Interaksi Manusia-Komputer
        \n\u25CF Kewarganegaraan
        \n\u25CF Pengantar Jaringan Komputer</string>
    <string name="list_semester5">\u25CF Pengantar Kecerdasan Buatan
        \n\u25CF Statistika dan Probabilitas
        \n\u25CF Komputer dan Masyarakat
        <b>\n\nPilihan Software Engineer :</b>
        \n\u25CF Analisa Pengembangan Perangkat Lunak
        \n\u25CF Pemrograman Web Lanjut
        \n\u25CF Desain Web UI &amp; UX
        \n\u25CF Basis Data Lanjut
        <b>\n\nPilihan Network Enterprise Engineer :</b>
        \n\u25CF Praktikum Pengantar Jaringan Komputer
        \n\u25CF Sistem Operasi Open Source
        \n\u25CF Cloud Computing
        \n\u25CF IT Essential</string>
    <string name="list_semester6">\u25CF Kerja Praktek
        \n\u25CF Penulisan Karya Ilmiah
        <b>\n\nPilihan Software Engineer :</b>
        \n\u25CF Manajemen Proyek
        \n\u25CF Pemrograman Web Full Stack
        \n\u25CF Pemrograman Android
        \n\u25CF Pengembangan Perangkat Lunak Agile
        <b>\n\nPilihan Network Enterprise Engineer :</b>
        \n\u25CF Switching dan Routing
        \n\u25CF Praktikum Switching dan Routing
        \n\u25CF Keamanan Jaringan Komputer
        \n\u25CF Jaringan Enterprise</string>
    <string name="list_semester7">\u25CF Metodologi Penelitian Teknologi Informasi
       \n\u25CF English Conversation
        <b>\n\nPilihan Software Engineer :</b>
        \n\u25CF Pemrograman Games
        \n\u25CF Pengenalan Big Data
        \n\u25CF Proyek Perangkat Lunak
        \n\u25CF Implementasi Proyek Perangkat Lunak
        \n\u25CF Keamanan Sistem Informasi
        <b>\n\nPilihan Network Enterprise Engineer :</b>
        \n\u25CF Internet of Things (IOT)
        \n\u25CF Jaringan VOIP
        \n\u25CF Proyek Jaringan Komputer
        \n\u25CF Implementasi Proyek Jaringan Komputer
        \n\u25CF Network Otomatisasi Scripting</string>
    <string name="list_semester8">\u25CF TUGAS AKHIR</string>
</resources>