<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/banner_memilih"
                android:layout_width="match_parent"
                android:layout_height="245dp"
                app:srcCompat="@drawable/banner_memilih"/>

            <TextView
                android:id="@+id/content1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/memilih_content1"
                android:textColor="@color/black" />

            <ImageView
                android:id="@+id/img1"
                android:layout_width="match_parent"
                android:layout_height="186dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                app:srcCompat="@drawable/img_memilih2"
                tools:layout_editor_absoluteY="68dp" />

            <TextView
                android:id="@+id/content2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/memilih_content2"
                android:textColor="@color/black" />

            <ImageView
                android:id="@+id/img2"
                android:layout_width="match_parent"
                android:layout_height="186dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                app:srcCompat="@drawable/img_memilih1" />

            <TextView
                android:id="@+id/content3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="50dp"
                android:layout_marginEnd="20dp"
                android:text="@string/memilih_content3"
                android:textColor="@color/black"/>

            <LinearLayout
                android:id="@+id/footer"
                android:layout_width="match_parent"
                android:layout_height="28dp"
                android:background="@color/primary_700"
                android:baselineAligned="false"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_marginTop="60dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/footer"
                    android:textColor="@color/white"
                    android:textSize="12sp"/>
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>