<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/banner"
                android:layout_width="match_parent"
                android:layout_height="245dp"
                android:src="@drawable/banner_kurikulum"/>

            <LinearLayout
                android:id="@+id/card1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@color/white"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                android:elevation="5dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="SEMESTER 1"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:layout_marginBottom="20dp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/list_semester1"
                        android:textColor="@color/black"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/card2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@color/white"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                android:elevation="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="SEMESTER 2"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:layout_marginBottom="20dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/list_semester2"
                    android:textColor="@color/black"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/card3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@color/white"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                android:elevation="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="SEMESTER 3"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:layout_marginBottom="20dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/list_semester3"
                    android:textColor="@color/black"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/card4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@color/white"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                android:elevation="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="SEMESTER 4"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:layout_marginBottom="20dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/list_semester4"
                    android:textColor="@color/black"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/card5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@color/white"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                android:elevation="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="SEMESTER 5"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:layout_marginBottom="20dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/list_semester5"
                    android:textColor="@color/black"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/card6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@color/white"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                android:elevation="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="SEMESTER 6"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:layout_marginBottom="20dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/list_semester6"
                    android:textColor="@color/black"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/card7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@color/white"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                android:elevation="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="SEMESTER 7"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:layout_marginBottom="20dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/list_semester7"
                    android:textColor="@color/black"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/card8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@color/white"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                android:elevation="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="SEMESTER 8"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:layout_marginBottom="20dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/list_semester8"
                    android:textColor="@color/black"/>

            </LinearLayout>


            <LinearLayout
                android:id="@+id/footer"
                android:layout_width="match_parent"
                android:layout_height="28dp"
                android:background="@color/primary_700"
                android:baselineAligned="false"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_marginTop="60dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/footer"
                    android:textColor="@color/white"
                    android:textSize="12sp"/>
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>